<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="mscdAppName">Morse Code App Android</string>

    <string name="mscdMenuActionFlashlight">Flashlight</string>
    <string name="mscdMenuActionAudio">Audio</string>
    <string name="mscdMenuActionVibrator">Vibrator</string>
    <string name="mscdMenuActionTypewriter">Typewriter</string>

    <string name="mscdHomepageTitle">Morse Code Android</string>
    <string name="mscdHomepageMorseCodeTranslator">Morse Code Translator</string>
    <string name="mscdHomepageMorseCodeLearning">Morse Code Learning</string>

    <string name="mscdTranslatorTitle">MC Translator</string>
    <string name="mscdTranslator">Translator</string>

    <string name="mscdLearningTitle">MC Learning</string>

    <string name="mscdCharSelectingTitle">Char Selecting</string>
    <string name="mscdCharSelectingRecommendedSequence">Recommended training sequence:</string>
    <string name="mscdCharSelectingHintAtLeastOneChar">Please select one char at least.</string>
    <string name="mscdCharSelectingConfigMsgLength">Message length</string>
    <string name="mscdCharSelectingConfigMsgLengthUnits">(char ex. spacing)</string>
    <string name="mscdCharSelectingConfigMsgLengthDefault">200</string>
    <string name="mscdCharSelectingConfigMsgLengthHintCorrect">You should input a correct message length in positive integer.</string>
    <string name="mscdCharSelectingConfigMsgLengthHintNotZero">The message length should not be zero.</string>
    <string name="mscdCharSelectingConfigWordSize">Maximal word size</string>
    <string name="mscdCharSelectingConfigWordSizeUnits">(char)</string>
    <string name="mscdCharSelectingConfigWordSizeDefault">5</string>
    <string name="mscdCharSelectingConfigWordSizeHintCorrect">You should input a correct word size in positive integer.</string>
    <string name="mscdCharSelectingConfigWordSizeHintNotZero">The word size should not be zero.</string>
    <string name="mscdCharSelectingConfigKeySpeed">Key speed</string>
    <string name="mscdCharSelectingConfigKeySpeedUnits">(wpm)</string>
    <string name="mscdCharSelectingConfigKeySpeedDefault">26</string>
    <string name="mscdCharSelectingConfigKeySpeedHintCorrect">You should input a correct key speed in positive integer.</string>
    <string name="mscdCharSelectingConfigKeySpeedHintNotZero">The key speed should not be zero.</string>
    <string name="mscdCharSelectingConfigDitDuration">Dit duration</string>
    <string name="mscdCharSelectingConfigDitDurationUnits">(ms)</string>
    <string name="mscdCharSelectingConfigDitDurationDefault">50</string>
    <string name="mscdCharSelectingConfigDitDurationHintCorrect">You should input a correct dit duration in positive integer.</string>
    <string name="mscdCharSelectingConfigDitDurationHintNotZero">The dit duration should not be zero.</string>

    <string name="mscdTrainingTitle">Training</string>
    <string name="mscdTrainingTransmitted">Transmitted messages.</string>
    <string name="mscdTrainingRecoded">Recoded messages.</string>


    <string name="mscdRandomStringGenerateSucceeded">Random string generate succeeded.</string>
    <string name="mscdRandomStringGenerateFailed">Random string generate failed.</string>
    <string name="mscdRandomStringGenerateCancelled">Random string generate cancelled.</string>

    <string name="mscdAudioDataGenerateSucceeded">Audio data generate succeeded.</string>
    <string name="mscdAudioDataGenerateFailed">Audio data generate failed.</string>
    <string name="mscdAudioDataGenerateCancelled">Audio data generate cancelled.</string>

    <string name="mscdTypewriterDurationGenerateSucceeded">Typewriter duration generate succeeded.</string>
    <string name="mscdTypewriterDurationGenerateFailed">Typewriter duration generate failed.</string>
    <string name="mscdTypewriterDurationGenerateCancelled">Typewriter duration generate cancelled.</string>

    <string name="mscdAudioPlaySucceeded">Audio play succeeded.</string>
    <string name="mscdAudioPlayFailed">Audio play failed.</string>
    <string name="mscdAudioPlayCancelled">Audio play cancelled.</string>

    <string name="mscdFailingInfo">Failing Info:</string>

    <string name="mscdCharAlphabetA">A</string>
    <string name="mscdCharAlphabetB">B</string>
    <string name="mscdCharAlphabetC">C</string>
    <string name="mscdCharAlphabetD">D</string>
    <string name="mscdCharAlphabetE">E</string>
    <string name="mscdCharAlphabetF">F</string>
    <string name="mscdCharAlphabetG">G</string>
    <string name="mscdCharAlphabetH">H</string>
    <string name="mscdCharAlphabetI">I</string>
    <string name="mscdCharAlphabetJ">J</string>
    <string name="mscdCharAlphabetK">K</string>
    <string name="mscdCharAlphabetL">L</string>
    <string name="mscdCharAlphabetM">M</string>
    <string name="mscdCharAlphabetN">N</string>
    <string name="mscdCharAlphabetO">O</string>
    <string name="mscdCharAlphabetP">P</string>
    <string name="mscdCharAlphabetQ">Q</string>
    <string name="mscdCharAlphabetR">R</string>
    <string name="mscdCharAlphabetS">S</string>
    <string name="mscdCharAlphabetT">T</string>
    <string name="mscdCharAlphabetU">U</string>
    <string name="mscdCharAlphabetV">V</string>
    <string name="mscdCharAlphabetW">W</string>
    <string name="mscdCharAlphabetX">X</string>
    <string name="mscdCharAlphabetY">Y</string>
    <string name="mscdCharAlphabetZ">Z</string>
    <string name="mscdCharNumber0">0</string>
    <string name="mscdCharNumber1">1</string>
    <string name="mscdCharNumber2">2</string>
    <string name="mscdCharNumber3">3</string>
    <string name="mscdCharNumber4">4</string>
    <string name="mscdCharNumber5">5</string>
    <string name="mscdCharNumber6">6</string>
    <string name="mscdCharNumber7">7</string>
    <string name="mscdCharNumber8">8</string>
    <string name="mscdCharNumber9">9</string>
    <string name="mscdCharSignDot">.</string>
    <string name="mscdCharSignColon">:</string>
    <string name="mscdCharSignComma">,</string>
    <string name="mscdCharSignSemicolon">;</string>
    <string name="mscdCharSignQuestion">\?</string>
    <string name="mscdCharSignEqual">=</string>
    <string name="mscdCharSignSingleQuotation">`</string>
    <string name="mscdCharSignSlash">/</string>
    <string name="mscdCharSignExclamation">!</string>
    <string name="mscdCharSignDash">-</string>
    <string name="mscdCharSignUnderscore">_</string>
    <string name="mscdCharSignMarkDoubleQuotation">"</string>
    <string name="mscdCharSignLeftParenthesis">(</string>
    <string name="mscdCharSignRightParenthesis">)</string>
    <string name="mscdCharSignDollar">$</string>
    <!--<string name="mscdCharSignAmpersand">&</string>-->
    <string name="mscdCharSignAt">\@</string>
    <string name="mscdCharSignSpace">Space</string>

    <string name="mscdClean">Clean</string>
</resources>
