<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >

    <item
            android:id="@+id/itemAudio"
            android:icon="@drawable/mscd_ic_action_audio_off_white"
            android:orderInCategory="1"
            android:title="@string/mscdMenuActionAudio"
            android:visible="true"
            app:showAsAction="ifRoom"
            />

    <item
            android:id="@+id/itemFlashlight"
            android:icon="@drawable/mscd_ic_action_flashlight_off_white"
            android:orderInCategory="2"
            android:title="@string/mscdMenuActionFlashlight"
            android:visible="false"
            app:showAsAction="ifRoom"
            />

    <item
            android:id="@+id/itemVibrator"
            android:icon="@drawable/mscd_ic_action_vibrator_off_white"
            android:orderInCategory="3"
            android:title="@string/mscdMenuActionVibrator"
            android:visible="false"
            app:showAsAction="ifRoom"
            />

    <item
            android:id="@+id/itemTypewriter"
            android:icon="@drawable/mscd_ic_typewriter_off_white"
            android:orderInCategory="4"
            android:title="@string/mscdMenuActionTypewriter"
            android:visible="false"
            app:showAsAction="ifRoom"
            />
</menu>
